Fix z-index on avatar cards.

--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -141,6 +141,7 @@
   margin: 0;
   padding: 0;
   position: relative;
+  z-index: 1;
   &:before {
     content: '';
     position: absolute;
